# ged

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  DATA_INTEGRITY_TOOLS.md  GENEALOGY_SOFTWARE_WORKFLOW.md  LICENSE  PROCESSING_PLAN.md  PROJECT_COMPLETE.md  README.md  README_local.md  commitlint.config.js  final.dedup.ged  final.ged  final_cleanup.sh  gedfix_finalize_agent.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  report.json  start_manual_review.py  yes.ged
.github/: dependabot.yml
.github/workflows/: build-chrome-ext.yml  ci.yml  deploy-web.yml  gitleaks.yml  release.yml
.serena/: project.yml
.warp/: gedcom_processing_guide.md
GedFixKMP/: settings.gradle.kts
GedFixKMP/composeApp/: build.gradle.kts
Plans/: humble-enchanting-hopper.md
apps/desktop/: .prettierignore  .prettierrc  eslint.config.js  package-lock.json  package.json  vite.config.js  vitest.config.ts
archive/fact-geocoding/: marriage.csv
archive/kmp/: README.md  gradle.properties
archive/legacy-scripts/: add_media_to_gedcom.py  analyze_myheritage_issues.py  comprehensive_duplicate_processor.py  geocode_pipeline.sh  master_gedcom_workflow.sh  remove_duplicate_facts.py  safe_duplicate_detector.py  setup_processing_workspace.sh  source_preserving_person_dedupe.py  ultra_safe_person_merger.py  verify_data_integrity.sh
archive/merge_reports/: merge_report_20250825_024808.json
archive/new-processing-outputs/: GEDCOM_cleanup_plan.md  build_cache_from_geonames.py  final.names_dedup.ged  final.names_dedup.ged.preLinkCleanup  final.names_dedup.ged.preMedia  issues_overview.csv  master_geo_media_082725).ged  media_suggestions.txt  places_cache.csv  remove_dup_links.py  remove_dup_names.py
archive/old-readmes/: README_old.md
archive/one-off-scripts/: create_portable_package.sh  fix_helen_births.py  fix_myheritage_properly.py  gedfix_complete_agent.sh  myheritage_fixer.py
archive/processed-gedcoms/: 0819.final.ged  final.names_dedup.ged  sample.ged
archive/processing-docs/: COMPLETE_PROJECT_DOCUMENTATION.md  COMPREHENSIVE_PROCESSING_COMPLETE.md  GEOCODING_SUMMARY.md  GITHUB_AUTH_SETUP.md  GITHUB_SETUP.md  LARGE_FILES_EXCLUDED.md  MYHERITAGE_ANALYSIS_COMPLETE.md  MYHERITAGE_FIXES_SUMMARY.md  MYHERITAGE_HYBRID_FIXES_COMPLETE.md  WARP.md
archive/rules-legacy/: aggressive.yaml
archive/swift/: Package.resolved  Package.swift  README.md
data/analysis/: consolidation_summary.md  file_analysis.txt  fixed_deduplication_log.json  fixed_deduplication_report.md  fixed_deduplication_v2_log.json
data/master/: clean_working_master_processed.ged  clean_working_master_quality_report.json  complete_with_sources.ged  ftm_export_20260320.ged  master.ged  roots_master.ged  working_master.ged
data/merged/: CRITICAL_ISSUE_DATES_LOST.md  FINAL_STATUS_AND_MYHERITAGE_STRATEGY.md  MYHERITAGE_FIXES_COMPLETED.md  MYHERITAGE_ISSUES_ANALYSIS.md  emergency_restore_date_check.json  final_consistency_check.md  final_date_verification.json  manual_review_issues.json  merge_log.json  merge_log_v2.json  myheritage_deduped_fixed.ged  myheritage_deduped_fixed_v2.ged  myheritage_fixed_phase1.ged  myheritage_issues.txt  phase1_aggressive_check.md  phase1_consistency_check.md  phase1_date_verification.json  phase2_date_verification.json
docs/: ai-provider-api-integration-spec.md  archi-zuber-investigation.md  competitive-feature-analysis.md  dna-analysis-tools-research.md  genealogy-app-deep-dive.md  genealogy-software-market-research.md  genealogy-ux-research.md  mallinger-jewish-genealogical-deep-research.md  mallinger-kalush-galicia-research.md  mallinger-patrilineal-research.md  mallinger-polish-jewish-archive-research.md  mallinger-vancouver-canada-research.md  pittsburgh-mallinger-family-research.md  rm10_sources.txt  tauri-svelte-performance-guide.md
gedfix/: __init__.py  api.py  cli.py  config.py  config.yaml  dates.py  fix_non_date.py  fixer.py  io_utils.py  manual_review.py  merge.py  names.py  report.py  rules.py  rules.yaml  validation.py
gedfix-app/: package-lock.json  package.json  vite.config.js  vitest.config.ts
gedfix-app/src-tauri/: Cargo.toml  tauri.conf.json
gedfix-app/src-tauri/.cargo/: config.toml
gedfix-app/src-tauri/MEMORY/WORK/20260321-120000_mallinger-polish-jewish-archive-research/: PRD.md
gedfix-app/src-tauri/MEMORY/WORK/20260321-120000_mallinger-surname-etymology-research/: mallinger-surname-research.md
gedfix-app/src-tauri/capabilities/: default.json
gedfix-app/src-tauri/src/: lib.rs
new/: final.names_dedup.ged.preGeo  geocode_places.py  unresolved_places.txt  unresolved_places_after_cache.txt
scripts/: aggressive_fact_cleaner.py  comprehensive_gedcom_processor.py  conservative_fact_deduplicator.py  deduplicate_names.py  fixed_deduplicate.py  gedcom-import.ts  merge_rm10_preserve_dates.py  parse_myheritage_pdf.py  rollback_to_backup.sh  rootsmagic_problem_fixer.py
tests/: test_checker_smoke.py  test_fix_idempotent.py
tools/cli/: pyproject.toml
tools/cli/gedfix/: __init__.py  api.py  checker.py  deduplication.py  export.py  places.py  rules.py
tools/cli/scripts/: gedcom-import.ts
tools/cli/tests/: test_comprehensive.py  test_config.py  test_dates.py  test_names.py  test_places.py  test_scan.py
tools/cli/tests/data/: minimal.ged
(+388 files in other folders)
