[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gedfix"
version = "0.1.0"
description = "Date-safe GEDCOM 5.5.1 cleaner with auditable AutoFix notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "ged4py>=0.5.2",
  "python-dateutil>=2.9",
  "rapidfuzz>=3.9",
]

[project.scripts]
gedfix = "gedfix.cli:main"

[tool.setuptools.packages.find]
where = ["."]  
include = ["gedfix*"]
exclude = ["tests*", "out*"]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-q"

[tool.setuptools.package-data]
"gedfix" = ["rules.yaml"]
