[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gedfix"
version = "1.0.0"
description = "Date-safe GEDCOM 5.5.1 cleaner with auditable AutoFix notes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Jonathan Mallinger"}]
dependencies = [
  "click>=8.1",
  "ged4py>=0.5.2",
  "python-dateutil>=2.9",
  "pyyaml>=6.0",
  "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
  "mypy>=1.10",
]

[project.scripts]
gedfix = "gedfix.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gedfix*"]
exclude = ["tests*", "out*"]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-q --cov=gedfix --cov-report=term-missing --cov-fail-under=60"
testpaths = ["tests"]

[tool.setuptools.package-data]
"gedfix" = ["rules.yaml"]

# --- Ruff (linter + formatter, replaces flake8 + black + isort) ---
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["gedfix"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Mypy (type checking) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
